--- a/index.html
+++ b/index.html
@@ -1,9 +1,156 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href="assets/css/style.css">
-    </head>
-    <body>
-        <p>Hello world!</p>
-    </body>
+
+<head>
+    <!-- Bootstrap and CSS stylesheets -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link href="assets/css/style.css">
+</head>
+
+<header>
+    <h1>Task List</h1>
+</header>
+
+<!-- Body HTML starts here -->
+
+<body>
+
+    <h2>Add New Task</h2>
+
+    <!-- Form -->
+    <h3>Task Name</h3>
+    <input class="form-control form-control-sm" type="text" placeholder="Task Name"><br>
+
+    <h3>Task Description</h3>
+    <form>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1"></label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+    </form>
+
+    <h3>Assigned To</h3>
+    <input class="form-control form-control-sm" type="text" placeholder="Assigned To"><br>
+
+    <!-- Date Picker -->
+    <h3>Due Date</h3>
+        <!-- Special version of Bootstrap that only affects content wrapped in .bootstrap-iso -->
+        <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" />
+
+        <!--Font Awesome (added because you use icons in your prepend/append)-->
+        <link rel="stylesheet" href="https://formden.com/static/cdn/font-awesome/4.4.0/css/font-awesome.min.css" />
+
+        <!-- Inline CSS based on choices in "Settings" tab -->
+        <style>
+            .bootstrap-iso .formden_header h2,
+            .bootstrap-iso .formden_header p,
+            .bootstrap-iso form {
+                font-family: Arial, Helvetica, sans-serif;
+                color: black
+            }
+
+            .bootstrap-iso form button,
+            .bootstrap-iso form button:hover {
+                color: white !important;
+            }
+
+            .asteriskField {
+                color: red;
+            }
+        </style>
+
+        <!-- HTML Form (wrapped in a .bootstrap-iso div) -->
+        <div class="bootstrap-iso">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <form method="post">
+                            <div class="form-group ">
+                                <label class="control-label " for="date">
+                                </label>
+                                <div class="input-group">
+                                    <div class="input-group-addon">
+                                        <i class="fa fa-calendar-plus-o">
+                                        </i>
+                                    </div>
+                                    <input class="form-control" id="date" name="date" placeholder="MM/DD/YYYY"
+                                        type="text" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div>
+                                    <!-- There's a button here idk if we need or not -->
+                                    <button class="btn btn-primary " name="submit" type="submit">
+                                        Submit
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Extra JavaScript/CSS added manually in "Settings" tab -->
+        <!-- Include jQuery -->
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
+        <!-- Include Date Range Picker -->
+        <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css" />
+
+        <script>
+            $(document).ready(function () {
+                var date_input = $('input[name="date"]'); //our date input has the name "date"
+                var container = $('.bootstrap-iso form').length > 0 ? $('.bootstrap-iso form').parent() : "body";
+                date_input.datepicker({
+                    format: 'mm/dd/yyyy',
+                    container: container,
+                    todayHighlight: true,
+                    autoclose: true,
+                })
+            })
+        </script>
+
+    <!-- "Add Task" Button -->
+    <button type="button" class="btn btn-primary btn-sm">ADD TASK</button>
+    <br>
+
+    <!-- Task Card -->
+    <div class="card w-50">
+        <div class="card-body">
+            <h5 class="card-title">Task</h5>
+            <!-- May need to change classes for these later? -->
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Task Name</li>
+                <li class="list-group-item">Task Description</li>
+                <li class="list-group-item">Assigned To</li>
+                <li class="list-group-item">Due Date</li>
+                <li class="list-group-item">Status</li>
+            </ul>
+            <a href="#" class="btn btn-primary">Status</a>
+        </div>
+    </div>
+
+    <!-- Bootstrap Javascript -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
+    <!-- Datepicker stuff -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css" />
+</body>
+
 </html>
