--- a/index.html
+++ b/index.html
@@ -24,16 +24,14 @@
         <!-- Form -->
         <h3>Task Name</h3>
 
-        <form id="myForm" onsubmit="userInput()">
+        <form id="myForm" onsubmit="userInput(event)">
             <input id="taskName" class="form-control form-control-sm" type="text" placeholder="Task Name"><br>
 
             <h3>Task Description</h3>
-            <form>
                 <div class="form-group">
                     <label for="taskDescrip"></label>
                     <textarea class="form-control" id="taskDescrip" rows="3" placeholder="Task Description"></textarea>
                 </div>
-            </form>
 
             <h3>Assigned To</h3>
             <input class="form-control form-control-sm" id="assignedTo" type="text" placeholder="Assigned To"><br>
