Adds delete button function-- Needs debugging

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <p class="card-text">Due Date: </p>
                         <div class="alignment">
                             <p class="card-text">Status </p>
-                            <a href="#" class="btn btn-primary">Delete</a>
+                            <button type="button" class="btn btn-primary">Delete</button>
                         </div>
                     </div>
                 </div>
