Removes duplicate HTML cards, debugs button functionality

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <link href="./assets/css/style.css" rel="stylesheet">
 </head>
 
@@ -129,93 +130,8 @@
 
     </div>
     <div id="appear" class="">
-        <!-- HERE IS WHERE THE TASKS CARDS ARE -->
-        <ul class="list-group tasksList">
-            <li class="list-group-item" id="taskCard">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <div class="alignment">
-                            <h5 class="card-title" id="title">Task Name: </h5>
-                            <button type="button" class="btn btn-success done-button">Mark As Done</button>
-                        </div>
-                        <h6 class="card-subtitle mb-2 text-muted">Task Description: </h6>
-                        <p class="card-text">Assigned Date: </p>
-                        <p class="card-text">Due Date: </p>
-                        <div class="alignment">
-                            <p class="card-text">Status: </p>
-                            <button type="button" class="btn btn-success">Delete</button>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <!-- <li class="list-group-item">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <div class="alignment">
-                            <h5 class="card-title" id="title">Task Name</h5>
-                            <button type="button" class="btn btn-success">Status</button>
-                        </div>
-                        <h6 class="card-subtitle mb-2 text-muted">Task Description</h6>
-                        <p class="card-text">Assigned Date: </p>
-                        <p class="card-text">Due Date: </p>
-                        <div class="alignment">
-                            <p class="card-text">Status </p>
-                            <a href="#" class="btn btn-success">Delete</a>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <div class="alignment">
-                            <h5 class="card-title" id="title">Task Name</h5>
-                            <button type="button" class="btn btn-success">Status</button>
-                        </div>
-                        <h6 class="card-subtitle mb-2 text-muted">Task Description</h6>
-                        <p class="card-text">Assigned Date: </p>
-                        <p class="card-text">Due Date: </p>
-                        <div class="alignment">
-                            <p class="card-text">Status </p>
-                            <a href="#" class="btn btn-success">Delete</a>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <div class="alignment">
-                            <h5 class="card-title" id="name">Task Name</h5>
-                            <button type="button" class="btn btn-success">Status</button>
-                        </div>
-                        <h6 class="card-subtitle mb-2 text-muted">Task Description</h6>
-                        <p class="card-text">Assigned Date: </p>
-                        <p class="card-text">Due Date: </p>
-                        <div class="alignment">
-                            <p class="card-text">Status </p>
-                            <a href="#" class="btn btn-success">Delete</a>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <div class="alignment">
-                            <h5 class="card-title" id="name">Task Name</h5>
-                            <button type="button" class="btn btn-success">Status</button>
-                        </div>
-                        <h6 class="card-subtitle mb-2 text-muted">Task Description</h6>
-                        <p class="card-text">Assigned Date: </p>
-                        <p class="card-text">Due Date: </p>
-                        <div class="alignment">
-                            <p class="card-text">Status </p>
-                            <a href="#" class="btn btn-success">Delete</a>
-                        </div>
-                    </div>
-                </div>
-            </li> -->
+        <!-- HERE IS WHERE THE TASKS CARDS APPEAR -->
+        <ul class="list-group" id="tasksList">
         </ul>
     </div>
     <!-- <a href="#" class="btn btn-success">Status</a> -->
