Adds status badges to the task card

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div>
 
-        <h2>Add New Task</h2>
+        <h2>Add New Task</h2><br>
 
         <!-- Form -->
         <h3>Task Name</h3>
