A few more CSS changes before redeploying

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Bootstrap and CSS stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
@@ -139,16 +140,12 @@
                 <button type="submit" id="addTaskButton" onclick="userInput(event)" class="btn btn-success btn-sm"
                     value="submit">ADD TASK</button>
                 <br>
+                <br>
             <!-- </div> -->
-            <br>
             <!-- The error is a flex item, but may not need to be. Double check this! -->
             <div class="alert alert-light invisible" id="error" role="alert"> 
                 Please fill out all fields!
             </div>
-            <br>
-
-            
-
         </form>
 
     </div>
@@ -182,5 +179,4 @@
               </svg> by Alyssa, Willis, Jennet, and Anthony T.</p>
         </footer>
 </body>
-
 </html>
